<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_settings"
    app:startDestination="@id/settingsHubFragment">

    <fragment
        android:id="@+id/settingsHubFragment"
        android:name="ca.team6.aquasense.settings.SettingsHubFragment"
        tools:layout="@layout/fragment_settings_hub"
        android:label="Settings">

        <action
            android:id="@+id/action_hub_to_notifications"
            app:destination="@id/notificationsFragment" />
        <action
            android:id="@+id/action_hub_to_accounts"
            app:destination="@id/accountsBackupFragment" />
        <action
            android:id="@+id/action_hub_to_privacyPolicy"
            app:destination="@id/privacyPolicyFragment" />
        <action
            android:id="@+id/action_hub_to_displayUnits"
            app:destination="@id/displayUnitsFragment" />
        <action
            android:id="@+id/action_hub_to_sensorCalibration"
            app:destination="@id/sensorCalibrationFragment" />
        <action
            android:id="@+id/action_hub_to_contactSupport"
            app:destination="@id/contactSupportFragment" />
        <action
            android:id="@+id/action_hub_to_troubleshootingGuide"
            app:destination="@id/troubleshootingGuideFragment" />
        <action
            android:id="@+id/action_hub_to_aquariumTemplates"
            app:destination="@id/aquariumTemplatesFragment" />
        <action
            android:id="@+id/action_hub_to_aquariumSelector"
            app:destination="@id/aquariumSelectorFragment" />
        <action
            android:id="@+id/action_hub_to_waterParameters"
            app:destination="@id/waterParametersFragment" />
    </fragment>

    <fragment
        android:id="@+id/waterParametersFragment"
        android:name="ca.team6.aquasense.settings.WaterParametersFragment"
        tools:layout="@layout/fragment_water_parameters"
        android:label="@string/water_parameters" />

    <fragment
        android:id="@+id/aquariumSelectorFragment"
        android:name="ca.team6.aquasense.dashboard.AquariumSelectorFragment"
        tools:layout="@layout/fragment_aquarium_selector"
        android:label="@string/title_my_aquariums">
        <action
            android:id="@+id/action_aquariumSelectorFragment_to_addAquariumFragment"
            app:destination="@id/addAquariumFragment" />
    </fragment>

    <fragment
        android:id="@+id/addAquariumFragment"
        android:name="ca.team6.aquasense.dashboard.AddAquariumFragment"
        tools:layout="@layout/fragment_add_aquarium"
        android:label="@string/title_add_aquarium" />

    <fragment
        android:id="@+id/aquariumTemplatesFragment"
        android:name="ca.team6.aquasense.settings.AquariumTemplatesFragment"
        tools:layout="@layout/fragment_aquarium_templates"
        android:label="@string/aquarium_templates" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="ca.team6.aquasense.settings.NotificationsFragment"
        tools:layout="@layout/fragment_notifications"
        android:label="Notifications" />

    <fragment
        android:id="@+id/notificationHistoryFragment"
        android:name="ca.team6.aquasense.settings.NotificationHistoryFragment"
        tools:layout="@layout/fragment_notification_history"
        android:label="@string/title_notification_history" />

    <fragment
        android:id="@+id/accountsBackupFragment"
        android:name="ca.team6.aquasense.settings.AccountsBackupFragment"
        tools:layout="@layout/fragment_accounts_backup"
        android:label="@string/account_settings">
        <action
            android:id="@+id/action_accounts_to_editProfile"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="ca.team6.aquasense.settings.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile"
        android:label="@string/edit_profile" />

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="ca.team6.aquasense.settings.PrivacyPolicyFragment"
        tools:layout="@layout/fragment_privacy_policy"
        android:label="@string/privacy_policy" />

    <fragment
        android:id="@+id/displayUnitsFragment"
        android:name="ca.team6.aquasense.settings.DisplayUnitsFragment"
        tools:layout="@layout/fragment_display_units"
        android:label="Display &amp; Units" />

    <fragment
        android:id="@+id/sensorCalibrationFragment"
        android:name="ca.team6.aquasense.settings.SensorCalibrationFragment"
        tools:layout="@layout/fragment_sensor_calibration"
        android:label="Sensor Calibration">

        <action
            android:id="@+id/action_sensorCalibration_to_calibrationGuide"
            app:destination="@id/calibrationGuideFragment" />
    </fragment>

    <fragment
        android:id="@+id/calibrationGuideFragment"
        android:name="ca.team6.aquasense.settings.CalibrationGuideFragment"
        tools:layout="@layout/fragment_calibration_guide"
        android:label="@string/sensor_calibration" />

    <fragment
        android:id="@+id/contactSupportFragment"
        android:name="ca.team6.aquasense.settings.ContactSupportFragment"
        tools:layout="@layout/fragment_contact_support"
        android:label="Contact &amp; Support">
        <action
            android:id="@+id/action_contactSupport_to_contactForm"
            app:destination="@id/contactFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/troubleshootingGuideFragment"
        android:name="ca.team6.aquasense.settings.TroubleshootingGuideFragment"
        tools:layout="@layout/fragment_troubleshooting_guide"
        android:label="@string/troubleshooting_guide" />

    <fragment
        android:id="@+id/contactFormFragment"
        android:name="ca.team6.aquasense.settings.ContactFormFragment"
        tools:layout="@layout/fragment_contact_form"
        android:label="@string/contact_form" />

</navigation>
