<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_dashboard"
    app:startDestination="@id/dashboardFragment"
>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="ca.team6.aquasense.dashboard.DashboardFragment"
        android:label="@string/dashboard"
    >
        <action
            android:id="@+id/action_dashboardFragment_to_aquariumSelectorFragment"
            app:destination="@id/aquariumSelectorFragment"
        />
    </fragment>

    <fragment
        android:id="@+id/aquariumSelectorFragment"
        android:name="ca.team6.aquasense.dashboard.AquariumSelectorFragment"
        android:label="@string/title_my_aquariums"
    >
        <action
            android:id="@+id/action_aquariumSelectorFragment_to_addAquariumFragment"
            app:destination="@id/addAquariumFragment"
        />
    </fragment>

    <fragment
        android:id="@+id/addAquariumFragment"
        android:name="ca.team6.aquasense.dashboard.AddAquariumFragment"
        android:label="@string/title_add_aquarium"
        tools:layout="@layout/fragment_dashboard"
    />
</navigation>
